# fror-research

./: .gitignore  README.md
configs/: FordORR.cap  FordORR.dxw  registry.reg
fror_blender/: __init__.py  binread.py  blender_manifest.toml  decompress.py  importer.py  types.py
includes/: fror.hexpat
patterns/: bininfo_bin.hexpat  dbf.hexpat  fonts_hdr.hexpat  fonts_raw.hexpat  for_racing.hexpat  gradient_dat.hexpat  npc.hexpat  pcg.hexpat  spc.hexpat  textures_pc.hexpat  three_d_obj_db_pc.hexpat  three_d_objs_pc.hexpat  three_d_objsp_pc.hexpat
scripts/: dbf.py  fror.py  npc.py  pcg.py  requirements.txt
scripts/fror_blender/: blender_manifest.toml  importer.py
scripts/libfror/: pyproject.toml
scripts/libfror/src/libfror/: binread.py  decompress.py  types.py
